--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
+    "serve": "node build/build.js && http-server dist",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "buefy": "^0.8.15",
+    "d3": "^5.15.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
